project4_ws/log/build_2023-12-08_19-23-45/project4/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/samuel/ros2_humble/CSCE452-samuel.fafel/project4_ws/install/project4/lib/python3.10/site-packages/project4/load_world.py", line 42
    for i in range(resolution_translation)
                                          ^
SyntaxError: expected ':'

